fix: Wrap tags in the item detail page (#2398)
* fix: Wrap tags in the item detail page

* chore: Upgrade default Node version

--- a/src/components/ItemDetailPage/ItemDetailPage.css
+++ b/src/components/ItemDetailPage/ItemDetailPage.css
@@ -153,6 +153,12 @@
   margin-bottom: 25px;
 }
 
+.ItemDetailPage .tags-container {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 10px;
+}
+
 .ItemDetailPage .card .tag {
   background: #37333d;
   mix-blend-mode: normal;
